fix letter-spacing

--- a/src/css/sections/our-teachers-section.css
+++ b/src/css/sections/our-teachers-section.css
@@ -13,6 +13,7 @@
   font-weight: 400;
   line-height: 1.7;
   margin-bottom: 40px;
+  letter-spacing: normal;
 }
 .team-list {
   display: flex;
@@ -39,6 +40,7 @@
   color: var(--primary-text-color);
   font-size: 14px;
   line-height: 1.7;
+  letter-spacing: normal;
 }
 @media screen and (min-width: 768px) {
   .teachers-container {
